resolved whitespace issue on signup page

--- a/src/assets/styles/SignUpForm.scss
+++ b/src/assets/styles/SignUpForm.scss
@@ -1,6 +1,6 @@
-$ff:  Helvetica, sans-serif;
-$ff2: 'Crimson Text', serif;
-$bp: url('../images/avocado.jpeg');
+$ff: Helvetica, sans-serif;
+$ff2: "Crimson Text", serif;
+$bp: url("../images/avocado.jpeg");
 $anim: 5s fadein;
 
 div {
@@ -40,12 +40,12 @@ button {
   font-family: $ff2;
   margin-top: 20px;
   margin-left: 3em;
-	border : solid 3px #288c1a;
-	border-radius : 20px 6px 20px 6px ;
-	font-size : 20px;
-	color : #ffffff;
-	padding : 1px 17px;
-  background-color: #7F9C96;
+  border: solid 3px #288c1a;
+  border-radius: 20px 6px 20px 6px;
+  font-size: 20px;
+  color: #ffffff;
+  padding: 1px 17px;
+  background-color: #7f9c96;
   animation: $anim;
 }
 
@@ -63,7 +63,19 @@ button {
   }
 }
 
+.footer-copyright-signup {
+  height: 18em;
+}
+
+.signup-text {
+  text-align: center;
+}
+
 @-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
